--- a/front/Pages/product.css
+++ b/front/Pages/product.css
@@ -119,7 +119,7 @@ navbar
 .logoImg {
     height: 140px;
     width: 170px;
-    display: none;
+    display: block;
     margin-top: 70px;
 }
 
@@ -194,9 +194,11 @@ navbar
 
 .navigation{
     display: flex;
+    width: 102vw;
     justify-content: space-between;
     align-items: center;
     /* position: fixed; */
+        /* margin-top: -56px; */
     padding:0 1em ;
     /* border: 2px solid black; */
     /* background: linear-gradient(to right,var(--clr-accent),rgb(5, 133, 164)); */
@@ -220,7 +222,7 @@ navbar
 .nav-toggle{
     transition: var(--transition);
     position: fixed;
-    margin-left: 80%;
+    margin-left: 68%;
     margin-top: 6.8em;
     animation: bla 2s ease-in-out infinite;
 }
@@ -419,7 +421,7 @@ footer
     
     .foot2 {
         /* border: 2px solid red; */
-        width: 100vw;
+        width: 105vw;
         display: flex;
         justify-content: center;
         align-items: center;
@@ -596,8 +598,8 @@ footer
  .logoImg {
     height: 140px;
     width: 140px;
-     display: none;
-     margin-top: 70px;
+     display: block;
+     margin-top: 10px;
  }
  
  /* .logo {
@@ -665,7 +667,7 @@ footer
  }
  
  .show-links{
-     height: 12em;
+     height: 14em;
      padding: 1em;
  }
  
@@ -697,7 +699,7 @@ footer
  .nav-toggle{
      transition: var(--transition);
      position: fixed;
-     margin-left: 80%;
+     margin-left: 68%;
      margin-top: 6.8em;
      animation: bla 2s ease-in-out infinite;
  }
@@ -861,6 +863,9 @@ footer
     width: 200px;
     background-color: #f9f9f9;
     margin-left: 55px;
+
+    margin-top: -16%;
+
     /* border: 2px solid red; */
 }
 
@@ -880,14 +885,63 @@ footer
 }
 
 .prodImage {
-    max-width: 35%;
+    max-width: 100%;
     height: 32%;
     /* border: 2px solid red; */
-    /* margin-right: 200px; */
+    margin-right: -124px;
     /* height: auto; */
     border-radius: 8px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
+
+@media (max-width:800px) {
+    .prodImage {
+        max-width: 50%;
+        height: 32%;
+        /* border: 2px solid red; */
+        margin-right: -124px;
+        margin-left: 31px;
+        /* height: auto; */
+        border-radius: 8px;
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    }
+
+    .vertical-menu {
+        width: 229px;
+        background-color: #e8e8e8;
+        width: 131px;
+        /* height: ; */
+        background-color: #e8e8e8;
+        position: absolute;
+        left: 0%;
+        margin-top: -12%;
+    }
+
+    .menuAndHero {
+        display: flex;
+        /* justify-content: end;
+        margin-bottom: 30px;
+        flex-direction: row;
+        margin-left: 35%;
+        width: 41vw; */
+        /* border: 2px solid red; */
+        flex-direction: column;
+    }
+
+    .ProdInfo {
+        /* border: 2px solid red; */
+        width: 91vw;
+        line-height: 34px;
+        margin-top: 40%;    
+    }
+
+   
+    
+}
+
+
+
+
 
 .Hero {
     /* border: 2px solid red; */
@@ -903,8 +957,8 @@ footer
 .ProdInfo {
     /* border: 2px solid red; */
     width: 91vw;
-    line-height: 34px;
-    
+    line-height: 34px;    
+    margin-bottom:42% ;
 }
 
 /* ====== */
@@ -912,8 +966,14 @@ footer
 /* ====== */
 
  .vertical-menu {
-    width: 229px;
+    max-width: 30%;
     background-color: #e8e8e8;
+    width: 131px;
+    background-color: #e8e8e8;
+    position: absolute;
+    left: 0%;
+
+    margin-top: -8%;
   }
   
   .vertical-menu a {
@@ -942,10 +1002,14 @@ footer
 
     .menuAndHero {
         display: flex;
-        justify-content: space-between;
+        justify-content: end;
         margin-bottom: 30px;
         flex-direction: row;
+        margin-left: 35%;
+        width: 41vw;
     }
+
+  
   }
 
 
@@ -967,6 +1031,7 @@ footer
      height: 90vh;
      padding: 30px;
      color: black;
+     width: 100vw;
      display: flex;
      flex-direction: column;
      /* height: 4px; */
@@ -1000,14 +1065,16 @@ footer
          padding: 30px;
          color: black;
          position: absolute;
-         top: 150%;
+         top: 205%;
          bottom: 100%;
+         width: 97vw;
+         width: 100vw;
          /* height: 4px; */
      }
      
      .foot2 {
          /* border: 2px solid red; */
-         width: 100vw;
+         width: 105vw;
          display: flex;
          justify-content: center;
          align-items: center;
@@ -1116,6 +1183,19 @@ nav li {
     width: 78vh;
 }
 
-.menuHead {
-    
+.home {
+    margin-right: 30px;
+}
+
+
+
+
+@media (max-width:800px) {
+    .navigation {
+        width: 100vw;
+    }
+
+    .foot1 {
+        width: 93vw;
+    }
 }
