--- a/front/style.css
+++ b/front/style.css
@@ -180,8 +180,9 @@ navbar
 }
 
 .show-links{
-    height: 12em;
+    height: 14em;
     padding: 1em;
+    width: 100vw;
 }
 
 .navigation{
@@ -291,18 +292,19 @@ div .nav-link{
         display: block;
     }
     .nav-list1{
-        /* display: block; */
+        /* display: block;  */
         display: flex;
         justify-content: space-around;
         /* border: 2px solid red; */
-        width: 39vw;
+        width: 55vw;
         padding: 15px;
+        margin-left: -78px;
         height: 3vh;
-        z-index : 1000;
+        z-index: 1000;
     }
     .nav-link1{
         list-style: none;
-        width: 5vw;
+        width: 10vw;
         height: 3vh;
         display: flex;
         justify-content: center;
@@ -448,6 +450,7 @@ intro
     overflow: hidden; /* Ensure the overlay doesn't overflow */
     font-weight: bolder;
     line-height: 30px;
+    z-index: -1;
 }
 
 .my-services::before {
@@ -1113,3 +1116,18 @@ footer
         align-items: baseline;
     }
  }
+
+ .btn.btn-primary {
+    font-family: 'Quicksand', sans-serif;
+    font-weight: bold;
+    height: 2.5rem;
+    line-height: 2.5rem;
+    padding: 0 8rem;
+    border: 0;
+    border-radius: 3rem;
+    background-image: linear-gradient(131deg, #ffd340, #ff923c, #ff923c, #ff923c);
+    background-size: 300% 100%;
+    transition: all 0.3s 
+ }
+
+ 
